--- a/priv/gettext/errors.pot
+++ b/priv/gettext/errors.pot
@@ -7,7 +7,6 @@
 ## Run `mix gettext.extract` to bring this file up to
 ## date. Leave `msgstr`s empty as changing them here as no
 ## effect: edit them in PO (`.po`) files instead.
-
 ## From Ecto.Changeset.cast/4
 msgid "can't be blank"
 msgstr ""
@@ -18,10 +17,6 @@ msgstr ""
 
 ## From Ecto.Changeset.put_change/3
 msgid "is invalid"
-msgstr ""
-
-## From Ecto.Changeset.validate_acceptance/3
-msgid "must be accepted"
 msgstr ""
 
 ## From Ecto.Changeset.validate_format/3
@@ -41,10 +36,10 @@ msgid "does not match confirmation"
 msgstr ""
 
 ## From Ecto.Changeset.no_assoc_constraint/3
-msgid "is still associated with this entry"
+msgid "is still associated to this entry"
 msgstr ""
 
-msgid "are still associated with this entry"
+msgid "are still associated to this entry"
 msgstr ""
 
 ## From Ecto.Changeset.validate_length/3
